# gauntlet-week-1

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PRE-SEARCH.md  README.md  REQUIREMENTS.md  docker-compose.yml  fly.toml  konva-rust-revised.md  konva-rust.md  react-to-leptos.md  run-dev.sh
canvas/: Cargo.toml  clippy.toml
canvas/src/: camera.rs  camera_test.rs  consts.rs  doc.rs  doc_test.rs  engine.rs  engine_test.rs  hit.rs  hit_test.rs  input.rs  input_test.rs  lib.rs  render.rs
canvas/tests/: hygiene.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml  biome.json  index.html  package.json  rustfmt.toml  tsconfig.json  vite.config.ts
client-rust/: Cargo.toml  PLAN.md
client-rust/src/: app.rs  lib.rs
client-rust/src/components/: ai_panel.rs  board_card.rs  board_stamp.rs  canvas_host.rs  chat_panel.rs  inspector_panel.rs  inspector_panel_test.rs  left_panel.rs  mission_control.rs  mod.rs  rewind_shelf.rs  right_panel.rs  status_bar.rs  tool_rail.rs  tool_strip.rs  toolbar.rs  user_field_report.rs
client-rust/src/net/: api.rs  frame_client.rs  frame_client_test.rs  mod.rs  types.rs  types_test.rs
client-rust/src/pages/: board.rs  dashboard.rs  login.rs  mod.rs
client-rust/src/state/: ai.rs  auth.rs  auth_test.rs  board.rs  board_test.rs  boards.rs  boards_test.rs  canvas_view.rs  chat.rs  mod.rs  ui.rs  ui_test.rs
client-rust/src/util/: dark_mode.rs  mod.rs
client-rust/styles/: main.css
client/src/: App.tsx  app.rs  lib.rs  main.tsx
client/src/canvas/: Canvas.tsx  GridOverlay.module.css  GridOverlay.tsx  Shape.tsx  StickyNote.tsx  TextEditor.tsx
client/src/components/: AiPanel.module.css  AiPanel.tsx  BoardCard.module.css  BoardCard.tsx  BoardStamp.module.css  BoardStamp.tsx  ChatPanel.module.css  ChatPanel.tsx  InspectorPanel.module.css  InspectorPanel.tsx  LeftPanel.module.css  LeftPanel.tsx  MissionControl.module.css  MissionControl.tsx  RightPanel.module.css  RightPanel.tsx  StatusBar.module.css  StatusBar.tsx  ToolRail.module.css  ToolRail.tsx  ToolStrip.module.css  ToolStrip.tsx  Toolbar.module.css  Toolbar.tsx  UserFieldReport.module.css  UserFieldReport.tsx  ai_panel.rs  board_card.rs  board_stamp.rs  canvas_host.rs  chat_panel.rs  dial.rs  help_shortcuts_modal.rs  inspector_panel.rs  inspector_panel_test.rs  left_panel.rs  mission_control.rs  mod.rs  object_text_dialog.rs  rewind_shelf.rs  (+12 more)
client/src/hooks/: useAI.ts  useCanvasSize.ts  useFrameClient.ts
client/src/lib/: api.ts  frameClient.ts  grid.ts  objectActions.ts  types.ts
client/src/net/: api.rs  api_test.rs  frame_client.rs  frame_client_ai.rs  frame_client_ai_test.rs  frame_client_chat.rs  frame_client_chat_test.rs  frame_client_error.rs  frame_client_error_test.rs  frame_client_objects.rs  frame_client_objects_test.rs  frame_client_parse.rs  frame_client_parse_test.rs  frame_client_requests.rs  frame_client_requests_test.rs  frame_client_test.rs  mod.rs  types.rs  types_test.rs
client/src/pages/: BoardPage.tsx  DashboardPage.module.css  DashboardPage.tsx  LoginPage.tsx  board.rs  board_prompt.rs  board_prompt_bar.rs  board_prompt_bar_test.rs  board_prompt_test.rs  board_test.rs  dashboard.rs  dashboard_test.rs  login.rs  login_test.rs  mod.rs
client/src/state/: ai.rs  ai_test.rs  board.rs  board_test.rs  boards.rs  boards_test.rs  canvas_view.rs  canvas_view_test.rs  chat_test.rs  mod.rs  trace.rs  trace_test.rs  ui.rs  ui_test.rs
client/src/store/: board.ts
client/src/styles/: global.css
client/src/util/: animation.rs  animation_test.rs  auth.rs  auth_test.rs  canvas_input.rs  canvas_viewport.rs  color.rs  color_test.rs  dark_mode.rs  dark_mode_test.rs  dial_math.rs  dial_math_test.rs  frame.rs  frame_emit.rs  frame_emit_test.rs  mod.rs  (+10 more)
client/styles/: main.css
docs/: DESIGN.md  PLAN.md  PRE-SEARCH.md  ai-dev-cost.md  ai-development-log.md  canvas-rotation.md  collabboard-observability-design.md  collabboard-portfolio-design-spec.md  production-cost.md  requirements.md
frames/: Cargo.toml  README.md
frames/src/: lib.rs  lib_test.rs
perf/: Cargo.toml  README.md
perf/src/: e2e_perf_test.rs  lib.rs
scripts/: generate-stress-jsonl.py  stats-all.sh  stats-comments.sh  stats-coverage.sh  stats-deps.sh  stats-fn.sh  stats-git.sh  stats-lines.sh  stats-tests.sh
server/: .env.example  Cargo.toml
server/src/: frame.rs  frame_test.rs  main.rs  rate_limit.rs  rate_limit_test.rs  state.rs  state_helpers_test.rs  state_test.rs
server/src/db/: mod.rs
server/src/db/migrations/: 001_users.sql  002_boards.sql  003_board_objects.sql  005_sessions.sql  006_board_savepoints.sql  007_email_auth.sql  008_board_members.sql  009_board_access_codes.sql  010_board_visibility.sql  011_object_grouping.sql  012_frames_trace.sql
server/src/llm/: anthropic.rs  anthropic_test.rs  config.rs  config_test.rs  mod.rs  openai.rs  openai_test.rs  system.md  tools.rs  tools_test.rs  types.rs  types_test.rs
server/src/mermaid/: ast.rs  layout.rs  mod.rs  mod_test.rs  parse.rs
server/src/routes/: auth.rs  auth_test.rs  boards.rs  boards_test.rs  mod.rs  users.rs  ws.rs  ws_test.rs
server/src/services/: ai.rs  ai_test.rs  auth.rs  auth_test.rs  board.rs  board_test.rs  email_auth.rs  email_auth_test.rs  mod.rs  object.rs  object_test.rs  persistence.rs  persistence_test.rs  savepoint.rs  savepoint_test.rs  session.rs  session_test.rs  tool_syscall.rs
server/templates/: email_auth.html
src/: frame.rs  main.rs  state.rs
src/db/: mod.rs
src/llm/: mod.rs  openai.rs
src/routes/: mod.rs  ws.rs
src/services/: ai.rs  board.rs  cursor.rs  mod.rs  persistence.rs
traces/: Cargo.toml  README.md
traces/src/: lib.rs  lib_test.rs
traces/tests/: hygiene.rs
website/: index.html  main.js  styles.css
website/media/: recording-2026-02-18-1913.mov  recording-2026-02-18-2000.mov  recording-2026-02-18-2033.mov  recording-2026-02-18-2036.mov  recording-2026-02-18-2134.mov  recording-2026-02-19-1403.mov  recording-2026-02-19-2253.mov  recording-2026-02-20-1017.mov  recording-2026-02-20-1651.mov
website/transcripts/: index.json
(+275 files in other folders)
