[package]
name = "gauntlet-week-1"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
live-db-tests = []

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
thiserror = "2"
time = "0.3"
async-trait = "0.1"
dotenvy = "0.15"

# Leptos SSR integration
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
client-rust = { path = "../client-rust", features = ["ssr"] }

[dev-dependencies]
tokio-tungstenite = "0.26"

[features]
default = []
ssr = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
collapsible_else_if = "allow"
wildcard_imports = "allow"
needless_pass_by_value = "allow"
unnecessary_map_or = "allow"
unnecessary_result_map_or_else = "allow"
