[package]
name = "traces"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
frames = { path = "../frames" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
collapsible_else_if = "allow"
wildcard_imports = "allow"
needless_pass_by_value = "allow"
unnecessary_map_or = "allow"
unnecessary_result_map_or_else = "allow"
